--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>my first ever website</h1>
+    <p>the garden is beautiful</p>
+    <p>want to go anywhere</p>
+
+        
 </body>
 </html>
