--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>my first ever website</h1>
     <p>the garden is beautiful</p>
     <p>want to go anywhere</p>
+    <h2>look mama</h2>
 
         
 </body>
