--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>the garden is beautiful</p>
     <p>want to go anywhere</p>
     <h2>look mama</h2>
+    <button>new styleg</button>
+    <button>develop</button>
 
         
 </body>
